--- a/styles/blogs.module.css
+++ b/styles/blogs.module.css
@@ -46,12 +46,17 @@
   margin: 2rem 0;
 }
 
+@media only screen and (max-width: 768px) {
+	.cards {
+		flex-direction: column;
+	}
+}
+
 .date {
   display: flex;
   min-width: 20rem;
   min-height: 5rem;
   justify-content: flex-start;
-  align-self: center;
   align-items: center;
 }
 
