--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -10,6 +10,14 @@
 @media only screen and (max-width: 768px){
 	.footer {
 		margin: 0 3rem;
+		font-size: 1.4rem;
+	}
+}
+
+@media only screen and (max-width: 280px){
+	.footer {
+		max-width: 280px;
+		margin: 0 0 0 3rem;
 	}
 }
 
@@ -23,6 +31,13 @@
 	font-size: 2rem;
 	align-self: center;
 	padding: 0 3rem 0 0;
+}
+
+@media only screen and (max-width: 768px){
+	.branding {
+		font-size: 1.4rem;
+		padding: 0;
+	}
 }
 
 .link {
@@ -51,9 +66,22 @@
 	line-height: .5rem;
 }
 
+@media only screen and (max-width: 768px){
+	.copyleft {
+		margin-right: .5rem;
+	}
+}
+
 .icon {
 	font-size: 2.5rem;
 	padding: 2rem;
+}
+
+@media only screen and (max-width: 425px){
+	.icon {
+		font-size: 1.5rem;
+		padding: 1rem;
+	}
 }
 
 .text {
