--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -7,9 +7,16 @@
 	margin: 0 auto;
 }
 
+
 .footer {
 	display: flex;
 	flex-direction: column;
 	max-width: var(--width);
 	margin: 0 auto;
+}
+
+@media only screen and (max-width: 280px){
+	.footer {
+		max-width: 280px;
+	}
 }
