--- a/src/styles/aboutme.module.css
+++ b/src/styles/aboutme.module.css
@@ -18,6 +18,7 @@
   align-items: center;
 }
 
+
 @media only screen and (max-width: 768px) {
   .aboutme {
     padding: 0;
@@ -32,6 +33,7 @@
 .heading {
   position: relative;
   margin: 4rem 0;
+  font-size: 3rem;
 }
 
 .heading::after {
@@ -89,4 +91,14 @@
 
 .icon {
   width: 2.5rem;
+}
+
+.experiences ul {
+  list-style-type: disc;
+  margin: 1rem 0;
+}
+
+.experiences li {
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
 }
